[package]
name = "ai-tools-ox"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-tools-ox-derive = { path = "ai-tools-ox-derive" }
async-trait = "0.1.77"
derivative = "2.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.56"
